[gd_scene load_steps=43 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://gun.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/shoot_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/images/player.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/jump_sound2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/jump_sound1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/hit_ground_sound2.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/images/gun.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 8, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 8, 0, 8, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 8, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 24, 0, 8, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 8, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 40, 0, 8, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 8, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 8, 32, 8, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 16, 32, 8, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 24, 32, 8, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 8, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 40, 32, 8, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 8, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 8, 48, 8, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 16, 48, 8, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 24, 48, 8, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 32, 48, 8, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 40, 48, 8, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 8, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 8, 16, 8, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 16, 16, 8, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 24, 16, 8, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 32, 16, 8, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 40, 16, 8, 16 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "idle_boots",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "run_boots",
"speed": 12.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=26]
radius = 2.5
height = 2.9

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 6, 2 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 6, 0, 6, 2 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 12, 0, 6, 2 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 18, 0, 6, 2 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 24, 0, 6, 2 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=33]
radius = 1.07301
height = 2.75

[sub_resource type="CircleShape2D" id=34]
radius = 2.57189

[node name="Player" type="KinematicBody2D" groups=[
"recordable",
]]
position = Vector2( 274.472, 128.527 )
collision_layer = 2
script = ExtResource( 1 )
jump_speed = 155.0
friction = 0.9

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
texture = ExtResource( 4 )
hframes = 6
vframes = 8

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 25 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 26 )

[node name="IgnoreGroundSensor" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 64

[node name="Gun" type="KinematicBody2D" parent="."]
position = Vector2( 0, 1 )
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="Gun"]
position = Vector2( 1, 0 )
frames = SubResource( 32 )
frame = 3
playing = true

[node name="MuzzlePos" type="Position2D" parent="Gun"]
position = Vector2( 4, 0 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="Gun"]
stream = ExtResource( 3 )
pitch_scale = 0.9
bus = "Effects"

[node name="CooldownTimer" type="Timer" parent="Gun"]
wait_time = 0.25
one_shot = true

[node name="FootPos" type="Position2D" parent="."]
position = Vector2( 0, 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.86 )
rotation = 1.57079
shape = SubResource( 33 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="DoubleJumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Effects"

[node name="HitGroundSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Effects"

[node name="BalloonPusher" type="KinematicBody2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="BalloonPusher"]
position = Vector2( 0, -2 )
shape = SubResource( 34 )

[node name="CameraShakeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
